add 'add contact' and 'process contact request' use  cases